Fixed readability on movie info text

--- a/src/components/MovieDetails.css
+++ b/src/components/MovieDetails.css
@@ -45,6 +45,9 @@
   margin-bottom: 2rem;
   color: white;
   width: 400px;
+  background-color: rgba(0, 0, 0, 0.29);
+  padding: 5px;
+  transition: opacity 0.3s;
 }
 
 .title-rating-container {
